--- a/index.html
+++ b/index.html
@@ -3,36 +3,229 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Mi Sitio Web</title>
-    <!-- Agrega aquí tus enlaces a hojas de estilo CSS si los tienes -->
-    <link rel="stylesheet" href="styles.css">
-
+    <title>Tienda en Línea</title>
+    <!-- Enlaces a los archivos CSS de Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
 </head>
 <body>
+<!------------------------------------------
+           Barra de navegación 
+    --------------------------------------->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+        <a class="navbar-brand" href="#">Mi Tienda</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Carrito</a>
+                </li>
+                <li class="nav-item">
+                <div class="input-group">
+                    <input class="form-control" type="search" placeholder="Buscar productos" aria-label="Buscar productos">
+                    <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button> <!-- Ícono para el cuadro de búsqueda -->
+                </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="login.html">
+                        <i class="fas fa-user"></i> <!-- Ícono para el usuario -->
+                        Iniciar Sesión
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<!-- Encabezado -->
-<header>
-    <h1>Bienvenido a Mi Sitio Web</h1>
-    <nav>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Acerca de Nosotros</a></li>
-            <li><a href="#">Servicios</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
-    </nav>
-</header>
 
-<!-- Contenido principal -->
-<section>
-    <h2>Presentación</h2>
-    <p>Bienvenido a nuestro sitio web. Aquí encontrarás información sobre nuestros servicios y cómo podemos ayudarte.</p>
-</section>
 
-<!-- Sección de destacados -->
-<section>
-    <h2>Destacados</h2>
-    <ul>
-        <li><a href="#">Producto 1</a></li>
-        <li><a href="#">Producto 2</a
 
+
+<!---------------------------
+     Carrusel de productos 
+    ------------------------>
+<div class="container mt-5">
+    <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="img\slide\Slide1.jpg" class="d-block w-100" alt="Producto 1">
+            </div>
+            <div class="carousel-item">
+                <img src="img\slide\Slide2.jpg" class="d-block w-100" alt="Producto 2">
+            </div>
+            <div class="carousel-item">
+                <img src="img\slide\Slide7.jpg" class="d-block w-100" alt="Producto 3">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#productCarousel" role="button" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#productCarousel" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+        </a>
+    </div>
+</div>
+
+    <!--------------------
+        Productos 
+    ------------------------>
+    <div class="container mt-5">
+        <h2>Productos y Servicios</h2>
+
+        <div class="row">
+
+            <div class="col-md-3 mb-4">
+                <div class="image-container">
+                    <img src="./img/productos/Producto1.jpg"" class="img-fluid" alt="Imagen 1" >
+                    <a href="tu_pagina_destino.html" class="transparent-box">
+                        <h1>Ganado de carne</h1>
+                        <p>Añadir al carrito</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-3 mb-4">
+                <div class="image-container">
+                    <img src="./img/productos/Producto2.jpg"" class="img-fluid" alt="Imagen 2" >
+                    <a href="tu_pagina_destino.html" class="transparent-box">
+                        <h1>Ganado de leche</h1>
+                        <p>Añadir al carrito</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-3 mb-4">
+                <div class="image-container">
+                    <img src="./img/productos/Producto3.jpg"" class="img-fluid" alt="Imagen 3" >
+                    <a href="tu_pagina_destino.html" class="transparent-box">
+                        <h1>Cerdas reproductoras</h1>
+                        <p>Añadir al carrito</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-3 mb-4">
+                <div class="image-container">
+                    <img src="./img/productos/Producto4.jpg"" class="img-fluid" alt="Imagen 4" >
+                    <a href="tu_pagina_destino.html" class="transparent-box">
+                        <h1>Cerdos de engorde</h1>
+                        <p>Añadir al carrito</p>
+                    </a>
+                </div>
+            </div>
+
+            <!-- Segunda fila -->
+        </div>
+
+        <div class="row">
+
+            <div class="col-md-3 mb-4">
+                <div class="image-container">
+                    <img src="./img/productos/Producto6.jpg"" class="img-fluid" alt="Imagen 5" >
+                    <a href="tu_pagina_destino.html" class="transparent-box">
+                        <h1>Maquinaria agrícola</h1>
+                        <p>Añadir al carrito</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-3 mb-4">
+                <div class="image-container">
+                    <img src="./img/productos/Producto7.jpg"" class="img-fluid" alt="Imagen 6" >
+                    <a href="tu_pagina_destino.html" class="transparent-box">
+                        <h1>Recolección cafetera</h1>
+                        <p>Añadir al carrito</p>
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="col-md-3 mb-4">
+                <div class="image-container">
+                    <img src="./img/productos/Producto8.jpg"" class="img-fluid" alt="Imagen 7" >
+                    <a href="tu_pagina_destino.html" class="transparent-box">
+                        <h1>Plantaciones</h1>
+                        <p>Añadir al carrito</p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="col-md-3 mb-4">
+                <div class="image-container">
+                    <img src="./img/productos/Producto11.jpg"" class="img-fluid" alt="Imagen 8" >
+                    <a href="tu_pagina_destino.html" class="transparent-box">
+                        <h1>Almacenaje</h1>
+                        <p>Añadir al carrito</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+        <!--------------------
+        Acerca de la Empresa 
+    ------------------------>
+
+    <section id="about-us">
+        <div class="container">
+            <h2 id="welcome-text">Quiénes Somos</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem tempore recusandae possimus, ea voluptas nisi doloremque repellendus incidunt neque veritatis eius eligendi fugiat ut quod, consequatur repudiandae voluptates. Expedita, quasi.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, adipisci rem sed similique animi praesentium molestiae odit nemo, repudiandae illo autem dignissimos? Repudiandae reiciendis velit fugit, aliquid dignissimos deserunt architecto?</p>
+        </div>
+    </section>
+
+        <!--------------------
+             Footer 
+    ------------------------>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <!-- Sección de redes sociales -->
+                <div class="col-md-6">
+                    <h4>Redes Sociales</h4>
+                    <ul class="social-icons">
+                        <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                    </ul>
+                </div>
+                <!-- Sección de datos de contacto -->
+                <div class="col-md-6">
+                    <h4>Contacto</h4>
+                    <ul class="contact-info">
+                        <li><i class="fas fa-envelope"></i> servicoalcliente@agropecuario.com</li>
+                        <li><i class="fas fa-phone"></i> +6064232387</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Calle 20 N 43-50, Medellin</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+
+    <!-- Enlaces a los archivos JavaScript de Bootstrap-->
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+
+</body>
+</html>
