--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <!-- Enlaces a los archivos CSS de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <!-------------------------- 
@@ -16,16 +17,17 @@
 <body>
     <div class="container login-container">
         <h2 class="text-center">Iniciar Sesión</h2>
-        <form>
-            <div class="mb-3">
-                <label for="username" class="form-label">Nombre de usuario</label>
-                <input type="text" class="form-control" id="username" placeholder="Ingrese su nombre de usuario">
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" placeholder="Ingrese su contraseña">
-            </div>
-            <a href="home.html" class="btn btn-primary btn-block custom-margin">Iniciar Sesión</a>
+
+            <form id="login-form">
+                <div class="form-group">
+                    <label for="email">Correo Electrónico:</label> 
+                    <input type="email" class="form-control" id="usuario" name="usuario" required>
+                </div>
+                <div class="form-group">
+                    <label for="password">Contraseña:</label> 
+                    <input type="password" class="form-control" id="contrasena" name="contrasena" minlength="8" required>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block custom-margin" id="boton-iniciar-sesion">Iniciar Sesión</button>
 
 
             <button type="button" class="btn btn-link">
@@ -42,5 +44,7 @@
         </form>
         <a href="index.html" class="btn-go-home">Regresar a la página de inicio</a>
     </div>
+
+    <script src="/scripts/scriptLogin.js"></script>
 </body>
 </html>
