--- a/logup.html
+++ b/logup.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <h2>Registro</h2>
-                <form>
+                <form id="logup-form">
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre</label>
                         <input type="text" class="form-control" id="nombre" name="nombre" required>
@@ -43,18 +43,20 @@
                     </div>
                     <div class="mb-3">
                         <label for="contrasena" class="form-label">Contraseña</label>
-                        <input type="password" class="form-control" id="contrasena" name="contrasena" required>
+                        <input type="password" class="form-control" id="contrasena" name="contrasena" minlength="8" required>
                     </div>
                     <div class="mb-3">
                         <label for="verificar-contrasena" class="form-label">Verificar Contraseña</label>
                         <input type="password" class="form-control" id="verificar-contrasena" name="verificar-contrasena" required>
                     </div>
-                    <button type="submit" class="btn btn-primary">Registrarse</button>
+                    <button type="submit" class="btn btn-primary" id="boton-registrarse btn-block custom-margin">Registrarse</button>
                     <p><a href="login.html">¿Ya tienes una cuenta? Inicia sesión aquí</a></p>
-            </form>
                 </form>
+                
             </div>
         </div>
     </div>
+
+    <script src="/scripts/scriptLogup.js"></script>
 </body>
 </html>
